# battleship

./: CMakeLists.txt
src/: bot.cpp  human.cpp  human.h  main.cpp  player.h
test/: main.cpp
